--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,11 @@
             <artifactId>jackson-module-kotlin</artifactId>
             <version>2.13.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.12</version>
+        </dependency>
 
     </dependencies>
 
